<resources>
    <string name="app_name">车载便携一体化LTE定位系统</string>
    <string name="page_login_name">用户名</string>
    <string name="page_login_password">密码</string>
    <string name="page_login_login">登陆</string>
    <string name="title_activity_login">车载便携一体化LTE定位系统</string>
    <string name="page_center_configure">配置</string>
    <string name="page_center_start">开始测向</string>
    <string name="title_activity_control_center">管理中心</string>
    <string name="title_main_menu">主界面</string>
    <string name="title_main_menu_cell_monitor">守控小区</string>
    <string name="title_main_menu_find_STMSI">空码搜索</string>
    <string name="title_main_menu_orientation">目标测向</string>
    <string name="title_main_menu_environment_detection">环境探测</string>
    <string name="title_main_menu_configuration">参数配置</string>
    <string name="title_main_menu_cellPhone_info">本机信息</string>
    <string name="page_main_menu_target_phone_num">目标号码</string>
    <string name="page_main_menu_model_vehicle">车载</string>
    <string name="page_main_menu_model_carry">便携</string>
    <string name="page_main_menu_save">保存</string>
    <string name="page_main_menu_device_reboot">复位</string>
    <string name="page_main_menu_device_connect">连接</string>
    <string name="page_main_menu_device_disconnect">断开</string>
    <string name="title_main_menu_device_reboot_confirm">确认复位?</string>
    <string name="page_main_menu_device_reboot_confrim_ok">确定</string>
    <string name="page_main_menu_device_reboot_confirm_cancel">取消</string>
    <string name="title_activity_device_configuration">设备管理</string>
    <string name="title_device_configuration_show_detail">详细信息</string>
    <string name="title_device_configuration_confirm_delete">确认删除?</string>
    <string name="title_device_congituration_confirm_reboot">确认重启?</string>
    <string name="menu_device_configuration">添加设备</string>
    <string name="menu_device_configuration_dialog_add">添加</string>
    <string name="menu_device_configuration_dialog_cancel">取消</string>
    <string name="menu_device_configuration_save">保存</string>
    <string name="page_device_configure_detail">详情</string>
    <string name="page_device_configure_hint_device_name">设备名称:</string>
    <string name="page_device_configure_hint_ip">IP 地址:</string>
    <string name="page_device_configure_hint_messagePort">消息端口 : 3334</string>
    <string name="page_device_configure_hint_dataPort">数据端口 : 3333</string>
    <string name="page_device_configure_hint_board_type">板卡类型: </string>
    <string name="page_device_configure_hint_board_type_tdd">TDD</string>
    <string name="page_device_configure_hint_board_type_fdd">FDD</string>
    <string name="page_device_configure_switch_off">关</string>
    <string name="page_device_configure_switch_on">开</string>
    <string name="page_device_configure_show_detail_ok">确定</string>
    <string name="page_device_configure_show_detail_reboot">重启</string>
    <string name="page_device_configure_show_detail_delete">删除</string>
    <string name="page_device_configure_confirm_delete_ok">确定</string>
    <string name="page_device_configure_confirm_delete_cancel">取消</string>
    <string name="page_device_configure_confirm_reboot_ok">确定</string>
    <string name="page_device_configure_confirm_reboot_cancel">取消</string>
    <string name="title_activity_system_configuration">系统参数配置</string>
    <string name="menu_system_configuration_save">保存</string>
    <string name="page_system_configure_target">目标号码</string>
    <string name="page_system_configure_SMS_center">短信中心</string>
    <string name="page_system_configure_SMS_center_hint">该项不填则使用本机默认短信中心</string>
    <string name="page_system_configure_trigger">目标触发方式</string>
    <string name="page_system_configure_trigger_SMS">短信触发</string>
    <string name="page_system_configure_trigger_phone">电话触发</string>
    <string name="page_system_configure_trigger_SMS_type">短信触发类型</string>
    <string name="page_system_configure_trigger_SMS_inside">内部触发</string>
    <string name="page_system_configure_trigger_SMS_outside">外部触发</string>
    <string name="page_system_configure_trigger_SMS_inside_type">内部短信类型</string>
    <string name="page_system_configure_trigger_SMS_inside_normal">普通短信</string>
    <string name="page_system_configure_trigger_SMS_inside_silent">静默短信</string>
    <string name="page_system_configure_trigger_SMS_silent_type">静默短信类型</string>
    <string name="page_system_configure_trigger_SMS_silent_type_one">一</string>
    <string name="page_system_configure_trigger_SMS_silent_type_two">二</string>
    <string name="page_system_configure_trigger_SMS_silent_type_three">三</string>
    <string name="page_system_configure_trigger_SMS_silent_type_four">四</string>
    <string name="page_system_configure_trigger_SMS_silent_type_five">五</string>
    <string name="page_system_configure_trigger_max">触发总次数（次）</string>
    <string name="page_system_configure_SMS_interval">触发间隔（秒）</string>
    <string name="page_system_configure_filter_seconds">过滤门限（秒）</string>
    <string name="page_system_configure_orientation_data_refresh_interval">测向数据刷新间隔</string>
    <string name="page_system_configure_SINR_threshold">信噪比门限</string>
    <string name="page_system_configure_silence_timer">静默定时器（秒）</string>
    <string name="page_system_configure_receiving_antenna_count">接收天线数</string>
    <string name="title_activity_test_cell_monitor">守控小区</string>
    <string name="page_test_cell_monitor_next_step">保存</string>
    <string name="page_test_cell_monitor_item_earfcn">EARFCN</string>
    <string name="page_test_cell_monitor_item_pci">PCI</string>
    <string name="page_test_cell_monitor_item_earfcn_pci">EARFCN\PCI</string>
    <string name="page_test_cell_monitor_item_tac">TAC</string>
    <string name="page_test_cell_monitor_item_ecgi">E-CGI</string>
    <string name="page_test_cell_monitor_item_sinr">SINR</string>
    <string name="page_test_cell_monitor_item_rsrp">RSRP</string>
    <string name="page_test_cell_monitor_manual_cell">手动指定小区</string>
    <string name="page_test_cell_monitor_auto_cell">自动搜索小区</string>
    <string name="page_test_cell_monitor_cell_list">守控小区列表</string>
    <string name="page_test_cell_monitor_choose">守控</string>
    <string name="page_test_cell_monitor_alarm_choose">告警</string>
    <string name="page_test_cell_monitor_board">板卡</string>
    <string name="page_cell_monitor_device_name">"设备名称"</string>
    <string name="page_cell_monitor_earfcn">"Earfcn"</string>
    <string name="page_cell_monitor_pci">"PCI"</string>
    <string name="page_cell_monitor_start_monitor">"开始监控"</string>
    <string name="title_main_cell_monitor">小区守控配置</string>
    <string name="title_main_find_STMSI">寻找STMSI</string>
    <string name="title_main_orientation">测向</string>
    <string name="page_find_stmsi_device_name">"设备名称"</string>
    <string name="page_find_stmsi_filter_stmsi">过滤</string>
    <string name="page_find_stmsi_start">"开始"</string>
    <string name="page_find_stmsi_stop">"停止"</string>
    <string name="page_find_stmsi_target">目标号码:</string>
    <string name="page_find_stmsi_current_times">触发次数:</string>
    <string name="page_find_stmsi_current_fail_times">失败次数:</string>
    <string name="page_find_stmsi_sum_count">STMSI总数:</string>
    <string name="page_find_stmsi_null_count">无效STMSI数:</string>
    <string name="page_find_stmsi_current_pci">当前服务小区:</string>
    <string name="page_find_stmsi_sort_by_count">按次数排序</string>
    <string name="page_find_stmsi_title_stmsi">STMSI</string>
    <string name="page_find_stmsi_title_count">次数</string>
    <string name="page_find_stmsi_sort_by_time">按时间排序</string>
    <string name="page_find_stmsi_title_time">时间</string>
    <string name="page_find_stmsi_title_pci">PCI</string>
    <string name="page_find_stmsi_title_board">板卡</string>
    <string name="page_find_stmsi_title_earfcn">EARFCN</string>
    <string name="page_find_stmsi_title_ecgi">E-CGI</string>
    <string name="page_find_stmsi_target_stmsi">目标STMSI :</string>
    <string name="menu_find_stmsi_save">保存</string>
    <string name="page_orientation_find_device_name">"设备名称"</string>
    <string name="page_orientation_find_stmsi">"STMSI"</string>
    <string name="page_orientation_find_single">远</string>
    <string name="page_orientation_find_continue">近</string>
    <string name="page_orientation_find_start">"开始"</string>
    <string name="page_orientation_find_stop">"停止"</string>
    <string name="page_orientation_find_result_list_title_num">序号</string>
    <string name="page_orientation_find_result_list_title_pusch">能量</string>
    <string name="page_orientation_find_result_list_title_time">Time</string>
    <string name="page_orientation_find_result_list_title_pci">PCI</string>
    <string name="page_orientation_find_result_list_title_earfcn">EARFCN</string>
    <string name="page_orientation_find_result_graph_pucch">PUCCH</string>
    <string name="page_orientation_find_result_graph_pusch">PUSCH</string>
    <string name="page_orientation_find_target_stmsi">目标STMSI :</string>
    <string name="page_interference_device_name">"设备名称"</string>
    <string name="page_interference_start">"开始"</string>
    <string name="page_interference_stop">"停止"</string>
    <string name="page_interference_detective">"干扰探测"</string>
    <string name="page_interference_target">目标号码:</string>
    <string name="page_interference_current_times">触发次数:</string>
    <string name="page_interference_current_fail_times">失败次数:</string>
    <string name="page_interference_current_pci">当前服务小区:</string>
    <string name="page_interference_sort_by_count">按次数排序</string>
    <string name="page_interference_title_stmsi">STMSI</string>
    <string name="page_interference_title_count">次数</string>
    <string name="page_interference_sort_by_time">按时间排序</string>
    <string name="page_interference_title_time">时间</string>
    <string name="page_interference_title_pci">PCI</string>
    <string name="page_interference_title_board">板卡</string>
    <string name="page_interference_title_earfcn">EARFCN</string>
    <string name="page_interference_filter_count">过滤数量 :</string>
    <string name="menu_interference_save">保存</string>
    <string name="page_interference_sum_count">STMSI总个数:</string>
    <string name="page_interference_null_count">无效STMSI数:</string>
    <string name="page_local_info_my_stmsi">本机STMSI :</string>
    <string name="page_status_bar_device_status">设备状态 </string>
    <string name="page_status_bar_agi_one">M1</string>
    <string name="page_status_bar_agi_two">M2</string>
    <string name="page_status_bar_agi_three">M3</string>
    <string name="page_status_bar_agi_four">M4</string>
    <string name="page_status_bar_device_confirm">驻留状态</string>
    <string name="page_status_bar_rsrp">信号强度</string>
    <string name="page_status_bar_pci">PCI</string>
    <string name="page_test_cell_monitor_start">"开始"</string>
    <string name="page_test_cell_monitor_stop">"停止"</string>
    <string name="page_welcome_version">version 1.0</string>
    <string name="title_activity_welcome">欢迎</string>
    <string name="page_login_label_username">用户名:</string>
    <string name="page_login_label_password">密码:</string>
    <string name="page_login_label_count">剩余次数:</string>
    <string name="page_login_label_signin">登 录</string>
    <string name="page_login_label_manage">管 理</string>
    <string name="page_login_label_remember">记住账号</string>
    <string name="login_register_link">没有帐号？ <a href="http://fanfou.com/register">注册</a></string>
    <string name="page_user_manage_label_username">用户名</string>
    <string name="page_user_manage_label_password">密码</string>
    <string name="page_user_manage_label_count">剩余次数</string>
    <string name="page_user_manage_button_cancel">取消</string>
    <string name="page_user_manage_button_save">保存</string>
    <string name="page_user_manage_button_delete">删除</string>
    <string name="page_user_manage_button_add">添加</string>
    <string name="page_user_manage_button_update">更新</string>
    <string name="send">send</string>
</resources>