<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#000000"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/page_system_configure_SMS_center"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/system_configure_SMS_center"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="number"
            android:textSize="15sp"
            android:hint="@string/page_system_configure_SMS_center_hint"/>
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/page_system_configure_trigger_max"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/system_configure_trigger_max"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="number"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/page_system_configure_trigger"
            android:textSize="17sp" />

        <RadioGroup
            android:id="@+id/radiogroup1"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/system_configure_trigger_sms"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="@string/page_system_configure_trigger_SMS" />

            <RadioButton
                android:id="@+id/system_configure_trigger_phone"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="@string/page_system_configure_trigger_phone" />
        </RadioGroup>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/page_system_configure_trigger_SMS_type"
            android:textSize="17sp"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/system_configure_trigger_sms_inside"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:text="@string/page_system_configure_trigger_SMS_inside"/>
            <RadioButton
                android:id="@+id/system_configure_trigger_sms_outside"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:text="@string/page_system_configure_trigger_SMS_outside"/>
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/page_system_configure_trigger_SMS_inside_type"
            android:textSize="17sp"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/system_configure_trigger_sms_inside_silent"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:text="@string/page_system_configure_trigger_SMS_inside_silent"/>
            <RadioButton
                android:id="@+id/system_configure_trigger_sms_inside_normal"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:text="@string/page_system_configure_trigger_SMS_inside_normal"/>
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/page_system_configure_trigger_SMS_silent_type"
            android:textSize="17sp"/>
        <RadioGroup
            android:id="@+id/system_configure_trigger_sms_silent_type"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/system_configure_trigger_sms_silent_type_one"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:text="@string/page_system_configure_trigger_SMS_silent_type_one"/>
            <RadioButton
                android:id="@+id/system_configure_trigger_sms_silent_type_two"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:text="@string/page_system_configure_trigger_SMS_silent_type_two"/>
            <RadioButton
                android:id="@+id/system_configure_trigger_sms_silent_type_three"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:text="@string/page_system_configure_trigger_SMS_silent_type_three"/>
            <RadioButton
                android:id="@+id/system_configure_trigger_sms_silent_type_four"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:text="@string/page_system_configure_trigger_SMS_silent_type_four"/>
        </RadioGroup>
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/page_system_configure_SMS_interval"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/system_configure_trigger_interval"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="number"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/page_system_configure_filter_seconds"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/system_configure_filter_threshold"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="number"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/page_system_configure_silence_timer"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/system_configure_silence_timer"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="number"
            android:textSize="15sp" />
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#000000"
        android:layout_marginTop="10dp"/>
    <ListView
        android:id="@+id/device_configuration_listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="#000000"
        android:dividerHeight="1dip"
        android:clickable="true" />

</LinearLayout>