<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    tools:context="com.example.jbtang.agi_union.ui.UserManageFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/background_login_div_bg">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/page_user_manage_label_username"
                android:textSize="17sp"
                android:gravity="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/page_user_manage_label_password"
                android:textSize="17sp"
                android:gravity="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/page_user_manage_label_count"
                android:textSize="17sp"
                android:gravity="center"/>
        </LinearLayout>
        <ListView
            android:id="@+id/user_manage_listView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:id="@+id/user_manage_cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/page_user_manage_button_cancel"
                android:textSize="15sp"/>
            <Button
                android:id="@+id/user_manage_add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/page_user_manage_button_add"
                android:textSize="15sp"
                android:layout_marginLeft="15dp"/>
            <Button
                android:id="@+id/user_manage_save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/page_user_manage_button_save"
                android:textSize="15sp"
                android:layout_marginLeft="15dp"/>
        </LinearLayout>

    </LinearLayout>


</FrameLayout>
