<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/main_menu_head_image"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:background="@drawable/main_menu_image">
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:id="@+id/main_menu_model_choose_bar"
        android:layout_below="@+id/main_menu_head_image">

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:id="@+id/main_menu_target_phone_bar"
        android:layout_below="@+id/main_menu_model_choose_bar">
        <RadioGroup
            android:id="@+id/main_menu_model_choose"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/main_menu_model_vehicle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/page_main_menu_model_vehicle"/>
            <RadioButton
                android:id="@+id/main_menu_model_carry"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/page_main_menu_model_carry"/>
        </RadioGroup>
        <EditText
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:id="@+id/main_menu_target_phone_num"
            android:gravity="center"
            android:inputType="phone"
            android:textSize="15sp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/main_menu_target_phone_num_save"
            android:text="@string/page_main_menu_save"/>
    </LinearLayout>
    <GridView
        android:id="@+id/main_menu_gridView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/main_menu_target_phone_bar"
        android:numColumns="3"
        android:horizontalSpacing="10dp"
        android:verticalSpacing="10dp"
    />
    <ImageView
        android:id="@+id/main_menu_devide_line"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#000000"
        android:layout_below="@+id/main_menu_gridView"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_menu_devide_line"
        android:gravity="center"
        android:layout_marginTop="20dp">
        <Button
            android:id="@+id/main_menu_device_reboot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/page_main_menu_device_reboot"/>
        <Button
            android:id="@+id/main_menu_device_connnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/page_main_menu_device_connect"/>
        <Button
            android:id="@+id/main_menu_device_disconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/page_main_menu_device_disconnect"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/main_menu_device_status_bar"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="#FFBFBFBF"
        android:layout_alignParentBottom="true">
        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:text="@string/page_status_bar_device_status"
            android:textSize="17sp"/>
        <TextView
            android:id="@+id/main_menu_device_status_text"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textSize="17sp"/>
        <TextView
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/page_status_bar_agi_one"
            android:textSize="17sp"/>
        <TextView
            android:id="@+id/main_menu_device_background_one"
            android:layout_width="15dp"
            android:layout_height="20dp"
            />
        <TextView
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/page_status_bar_agi_two"
            android:textSize="17sp"/>
        <TextView
            android:id="@+id/main_menu_device_background_two"
            android:layout_width="15dp"
            android:layout_height="20dp"
            />
        <TextView
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/page_status_bar_agi_three"
            android:textSize="17sp"/>
        <TextView
            android:id="@+id/main_menu_device_background_three"
            android:layout_width="15dp"
            android:layout_height="20dp"
            />
        <TextView
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/page_status_bar_agi_four"
            android:textSize="17sp"/>
        <TextView
            android:id="@+id/main_menu_device_background_four"
            android:layout_width="15dp"
            android:layout_height="20dp"
            />
    </LinearLayout>
</RelativeLayout>