<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/page_user_manage_label_username"
            android:textSize="17sp"
            />
        <EditText
            android:id="@+id/user_manage_username_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/page_user_manage_label_password"
            android:textSize="17sp"
            />
        <EditText
            android:id="@+id/user_manage_password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/page_user_manage_label_count"
            android:textSize="17sp"
            />
        <EditText
            android:id="@+id/user_manage_count_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            android:id="@+id/user_manage_update_delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/page_user_manage_button_delete"
            android:layout_marginRight="20dp"
            android:textSize="15sp"/>
        <Button
            android:id="@+id/user_manage_update_add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/page_user_manage_button_update"
            android:textSize="15sp"/>
    </LinearLayout>
</LinearLayout>
